<resources>
    <string name="app_name">Role Playing System</string>
    <string name="error_title_no_loaded">troubles while loading</string>
    <string name="error_subtitle_no_loaded">Try again if you wish</string>
    <string name="retry_error_button">try again</string>
    <string name="error_title_no_connection">Troubles with connection</string>
    <string name="error_subtitle_no_connection">try again if you wish</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="action_sign_up" translatable="false">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_empty_field">%s shouldn\'t be empty</string>
    <string name="error_min_symbols">%s should contain at least 6 symbols</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_text">Don\'t forget to check your email.</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="email_has_been_sent">Email has been sent</string>
    <string name="success">Success</string>
    <string name="logout">Logout</string>
    <string name="create_game">Create game</string>
    <string name="game_name">Name</string>
    <string name="description">Description</string>
    <string name="list_of_games">Games</string>
    <string name="my_games">My games</string>
    <string name="input_password">Input password</string>
    <string name="here_could_be_description">It could be a description</string>
    <string name="master_of_the_game">Master</string>
    <string name="join_game">Join</string>
    <string name="characteristics">Characteristics</string>
    <string name="game_players">Players</string>
    <string name="error_network_connection">Network error</string>
    <string name="game_will_be_synched">Game will be synchronized, when network connection is ok</string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="super_game">Super game</string>
    <string name="delete_game">Delete game</string>
    <string name="your_message">Your message</string>
    <string name="log">Log</string>
    <string name="add_characteristic">Add characteristic</string>
    <string name="delete_characteristic">Delete characteristic</string>
    <string name="classes">Classes</string>
    <string name="add_class">Add class</string>
    <string name="races">Races</string>
    <string name="add_race">Add race</string>
    <string name="settings">Settings</string>
    <string name="progress_uploading">Uploading file</string>
    <string name="fail">Fail</string>
    <string name="maps">Maps</string>
    <string name="error">Error</string>
    <string name="all">All</string>
    <string name="master">Master</string>
    <string name="delete_map">Delete map</string>
    <string name="play">Play</string>
    <string name="player">Player</string>
    <string name="characters">Characters</string>
    <string name="occupied">Occupied</string>
    <string name="warrior">Warrior</string>
    <string name="human">Human</string>
    <string name="free">Free</string>
    <string name="access_error">Access error</string>
    <string name="action_progress" translatable="false">Progress</string>
    <string name="connecting">Connecting…</string>
    <string name="npc" translatable="false">NPC</string>
    <string name="make_npc">Make NPC</string>
    <string name="finish_game">Finish game</string>
    <string name="led">Led</string>
    <string name="took_part">Took part in</string>
    <string name="leave_game">Leave game</string>
    <string name="continue_lead_the_game">Continue lead game</string>
    <string name="continue_play_the_game">Continue play game</string>
    <string name="started">Started</string>
    <string name="participated_in">Took part in</string>
    <string name="completed_games">Completed games</string>
    <string name="open_game">Open game</string>
    <string name="undefined">Undefined</string>
    <string name="profile">Profile</string>
    <string name="games">Games</string>
    <string name="all_games">All games</string>
    <string name="total_games">total games</string>
    <string name="master_games">master games</string>
    <string name="nick_name">Nickname</string>
    <string name="email_translatable">Email</string>
    <string name="edit">Edit</string>
    <string name="denied_external">Rights to external memory are required to upload picture</string>
    <string name="search">Search</string>
    <string name="my_profile">My profile</string>
    <string name="my_last_games">My last games</string>
    <string name="pictures">Pictures</string>
    <string name="dices">Dices</string>
    <string name="menu">Menu</string>
    <string name="create_your_character">Create your character!</string>
    <string name="press_add_character">Press "Add" or choose one of free characters</string>
    <string name="throw_dice">Throw</string>
    <string name="save_dices_title">Save dice sets</string>
    <string name="save_dices_secondary">Press button "save set" to save most used dice combinations</string>
    <string name="save_set">Save set</string>
    <string name="new_throw">New throw</string>
    <string name="saved_collections">Saved sets</string>
    <string name="choose">Choose</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="rethrow_all_dices">Rethrow all dices</string>
    <string name="result">Result</string>
    <string name="max">max</string>
    <string name="throw_result">Throw result</string>
    <string name="details">Details</string>
</resources>
