<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    app:bbn_alwaysShowLabels="false"
    app:bbn_badgeColor="@color/material_red_500"
    app:bbn_rippleColor="#33ffffff">
    <item
        android:id="@+id/action_characters"
        android:color="@color/colorPrimaryDark"
        android:icon="@drawable/bottom_bar_characters"
        android:title="@string/characters" />
    <item
        android:id="@+id/action_dices"
        android:color="@color/colorPrimaryDark"
        android:icon="@drawable/bottom_bar_dice"
        android:title="@string/dices" />

    <item
        android:id="@+id/action_pictures"
        android:color="@color/colorPrimaryDark"
        android:icon="@drawable/bottom_bar_pictures"
        android:title="@string/pictures" />
    <item
        android:id="@+id/action_menu"
        android:color="@color/colorPrimaryDark"
        android:icon="@drawable/bottom_bar_menu"
        android:title="@string/menu" />
</menu>