<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_name"
        android:inputType="textCapSentences"
        app:met_floatingLabel="normal"
        app:met_singleLineEllipsis="true"
        app:met_typeface="fonts/Roboto-Regular.ttf"
        tools:text="Name" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="@integer/edit_text_max_lines_common"
        app:met_floatingLabel="normal"
        app:met_typeface="fonts/Roboto-Regular.ttf"
        tools:text="dsdfsf sfsfdsfdsfsfdsfdsfdsfdsfdsfds  sdfsfsfdsfs dsfdsfs sfdsfds fdsfsf sdfsfsf dsfsf sdfsfsfdsfdsfs sdfsfdsfssfdfsfs sdfs dsfsf" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:met_floatingLabel="normal"
        app:met_singleLineEllipsis="true"
        app:met_typeface="fonts/Roboto-Regular.ttf"
        tools:text="Name" />
</LinearLayout>