<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:appContext="com.valyakinaleksey.roleplayingsystem.modules.gamescreen.view.ParentActivity">

    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/game_characters_top_element_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_background"
        android:visibility="visible">

        <View
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"
            android:visibility="invisible"
            tools:visibility="visible" />

        <FrameLayout
            android:id="@+id/progress_state_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/status_bar"
            android:animateLayoutChanges="true"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_16"
            tools:visibility="gone">

            <LinearLayout
                android:id="@+id/no_dices_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/tv_title"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_dices_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dp_24"
                    tools:ignore="MissingPrefix,SpUsage" />

                <TextView
                    android:id="@+id/tv_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@string/save_dices_secondary"
                    android:textColor="@color/white7"
                    android:textSize="@dimen/dp_12"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/dices_collections_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_16">

                <TextView
                    android:id="@+id/saved_dices_count"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/dp_16"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15"
                    tools:ignore="MissingPrefix"
                    tools:text="Сохраненные наборы (8)" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_dices_collections"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/saved_dices_count"
                    android:layout_marginTop="@dimen/dp_8"
                    android:scrollbars="vertical" />
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/result_state_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/status_bar"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_result_back"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_8"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/dp_8"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/tv_throw_result"
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_toRightOf="@+id/iv_result_back"
                android:text="@string/throw_result"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_15"
                tools:ignore="MissingPrefix" />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/progress_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/material_layout_keylines_screen_edge_margin"
            android:layout_marginRight="@dimen/material_layout_keylines_screen_edge_margin"
            android:layout_weight="1"
            android:background="@drawable/accent_button_borders"
            android:text="@android:string/cancel"
            android:textColor="@drawable/textview_enable_text_color" />

        <Button
            android:id="@+id/btn_throw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/material_layout_keylines_screen_edge_margin"
            android:layout_weight="1"
            android:background="@drawable/accent_button"
            android:text="@string/throw_dice"
            android:textColor="@color/material_light_white" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/label_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_container"
        android:layout_marginBottom="@dimen/dp_8_inverse">

        <TextView
            android:id="@+id/new_throw"
            style="@style/SubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/new_throw" />


        <TextView
            android:id="@+id/save"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dp_8"
            android:text="@string/save_set"
            android:textColor="@drawable/textview_enable_text_color"
            tools:ignore="MissingPrefix" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/recycler_view_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_container"
        android:layout_margin="@dimen/dp_8">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progress_bottom_container"
            android:clipToPadding="false"
            android:padding="@dimen/dp_8"
            android:scrollbars="vertical" />
    </android.support.v7.widget.CardView>


</RelativeLayout>